HelloWorld/force-app/main/default/objects/College__c/College__c.object-meta.xml
<CustomObject>
    <label>College</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>College ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>