HelloWorld/force-app/main/default/objects/College__c/fields/Capacity_of_students__c.field-meta.xml
<CustomField>
    <fullName>Capacity_of_students__c</fullName>
    <label>Capacity of students</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>College_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000-2500</fullName>
            </value>
            <value>
                <fullName>2500-6000</fullName>
            </value>
            <value>
                <fullName>6000-10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>