HelloWorld/force-app/main/default/objects/College__c/fields/College_Fee__c.field-meta.xml
<CustomField>
    <fullName>College_Fee__c</fullName>
    <label>College Fee</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>