HelloWorld/force-app/main/default/objects/College__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIT-HYD</fullName>
            </value>
            <value>
                <fullName>MIT-BLR</fullName>
            </value>
            <value>
                <fullName>MIT-MUM</fullName>
            </value>
            <value>
                <fullName>MIT-MAA</fullName>
            </value>
            <value>
                <fullName>MIT-DEL</fullName>
            </value>
            <value>
                <fullName>MIT-CCU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>