HelloWorld/force-app/main/default/objects/College__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>College_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blr@mit.co.in</fullName>
            </value>
            <value>
                <fullName>hyd@mit.co.in</fullName>
            </value>
            <value>
                <fullName>ccu@mit.co.in</fullName>
            </value>
            <value>
                <fullName>del@mit.co.in</fullName>
            </value>
            <value>
                <fullName>mum@mit.co.in</fullName>
            </value>
            <value>
                <fullName>maa@mit.co.in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>