HelloWorld/force-app/main/default/objects/College__c/fields/Hostel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Fee__c</fullName>
    <label>Hostel Fee</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>